# dyson

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  dyson.rs  image.rs  main.rs  notifier.rs  provider.rs  summary.rs  utils.rs
src/provider/: ecr.rs  ecs_service.rs  lambda.rs  task_definition.rs
