[package]
name = "dyson"
version = "0.1.0"
edition = "2021"
authors = ["Daiki Shiroi <daikishiroi@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
async-trait = "0.1.68"
aws-config = "0.55.2"
aws-sdk-ecr = "0.27.0"
aws-sdk-ecs = "0.27.0"
aws-sdk-lambda = "0.27.0"
aws-smithy-http = "0.55.2"
aws-smithy-types = "0.55.2"
clap = { version = "4.2.5", features = ["derive"] }
futures = "0.3.28"
glob = "0.3.1"
once_cell = "1.17.1"
regex = "1.8.1"
serde = { version = "1.0.162", features = ["derive"] }
serde_yaml = "0.9.21"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["full"] }
tokio-stream = "0.1.14"

[dev-dependencies]
